# video2ascii

./: .gitignore  LICENSE  README.md  not-ai.sh  pyproject.toml  video2ascii  video2ascii.sh.bak
.cursor/rules/: project.mdc
deploy/: public-deployment.md
deploy/aws/: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf
deploy/mp4-server/: Dockerfile  README.md  fly.toml.example
deploy/workers/: README.md  stripe-worker.js  whisper-worker.js  wrangler.stripe.toml.example  wrangler.whisper.toml.example
examples/: README.md  not-ai-blocks.sh  not-ai-classic.sh  not-ai-simple.sh  not-ai.sh  sintel-subtitle-blocks.sh  sintel-subtitle-braille.sh  sintel-subtitle-classic.sh  sintel-subtitle-dense.sh  sintel-subtitle-petscii.sh  sintel-subtitle-simple.sh
tests/: __init__.py  conftest.py  test_cli.py  test_converter.py  test_export_api.py  test_exporter.py  test_fonts.py  test_mp4_api.py  test_mp4_exporter.py  test_player.py  test_presets.py  test_subtitle.py  test_web_app.py  test_web_renderer.py
video2ascii/: __init__.py  __main__.py  cli.py  converter.py  exporter.py  fonts.py  mp4_exporter.py  player.py  player_template.sh  presets.py  subtitle.py
video2ascii/services/: __init__.py  mp4_api.py
video2ascii/web/: __init__.py  app.py  renderer.py  server.py
video2ascii/web/static/: index.html  public.html
